# zooplotly

./: README.md  makefile  pyproject.toml
scripts/: generate_reference_images.py  install_fonts.sh
src/zooplotly/: template.py
src/zooplotly/templates/: zoo.json
tests/: test_plotting.py
